crates/reap-polymarket-adapter/tests/ui/owned_execution_role_is_linear.stderr
error[E0277]: the trait bound `PmFixtureOwnedExecution: Clone` is not satisfied
 --> tests/ui/owned_execution_role_is_linear.rs:6:21
  |
6 |     require_clone::<PmFixtureOwnedExecution>();
  |                     ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `PmFixtureOwnedExecution`
  |
note: required by a bound in `require_clone`
 --> tests/ui/owned_execution_role_is_linear.rs:3:21
  |
3 | fn require_clone<T: Clone>() {}
  |                     ^^^^^ required by this bound in `require_clone`
