crates/reap-polymarket-adapter/tests/ui/owned_execution_role_is_linear.rs
use reap_polymarket_adapter::PmFixtureOwnedExecution;

fn require_clone<T: Clone>() {}

fn main() {
    require_clone::<PmFixtureOwnedExecution>();
}
